# cosmos-apps

./: Cargo.toml  README.md
apx-shim/: Cargo.toml
apx-shim/src/: command.rs  entities.rs  error.rs  lib.rs  main.rs
apx-ui/: Cargo.toml  README.md  justfile
apx-ui/i18n/en/: apx_ui.ftl
apx-ui/resources/: app.desktop  app.metainfo.xml
apx-ui/src/: app.rs  main.rs
apx-ui/src/pages/: mod.rs  pkgmanagers.rs  stacks.rs  subsystems.rs
apx-ui/src/utils/: mod.rs
cosmos-apxui/: Cargo.toml  README.md  justfile
cosmos-apxui/resources/: app.desktop  app.metainfo.xml
cosmos-apxui/src/: app.rs
cosmos-apxui/src/pages/: pkgmanagers.rs  stacks.rs  subsystems.rs
cosmos-common/: Cargo.toml
cosmos-common/src/: format.rs  lib.rs  utils.rs
cosmos-dbus/: Cargo.toml
cosmos-dbus/src/: lib.rs
cosmos-dbus/src/disks/: drive.rs  manager.rs  mod.rs  partition.rs  partition_type.rs
cosmos-dbus/src/udisks/: drive.rs  mod.rs  partition.rs
cosmos-disks/: Cargo.toml  README.md
cosmos-disks/src/: app.rs  main.rs
cosmos-disks/src/utils/: mod.rs
cosmos-disks/src/views/: dialogs.rs  volumes.rs
