[package]
name = "apx-shim"
version = "0.1.0"
edition = "2021"
description = "Apx interop library"

[dependencies]
anyhow = { workspace = true }
duct = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
