[package]
name = "cosmos-apxui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "GUI for Apx"
repository = "https://github.com/stoorps/cosmos-apps"

[build-dependencies]
vergen = { workspace = true }

[dependencies]
apx-shim = { workspace = true }
futures-util = { workspace = true }
i18n-embed-fl = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

i18n-embed = { workspace = true }
libcosmic = { workspace = true }
