[package]
name = "cosmos-disks"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "An application for the COSMIC™ desktop"
repository = "https://github.com/stoorps/cosmos-apps.git"

[build-dependencies]
vergen = { workspace = true }

[dependencies]
futures-util = { workspace = true }
i18n-embed-fl = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
i18n-embed = { workspace = true }
libcosmic = { workspace = true }
tracing-subscriber = { workspace = true }

cosmos-common = { workspace = true }
cosmos-dbus = { workspace = true }
